--- a/03. Guide to HTML5 Canvas/05. Canvas tutorial/05. Using images/styles.css
+++ b/03. Guide to HTML5 Canvas/05. Canvas tutorial/05. Using images/styles.css
@@ -1,3 +1,30 @@
 canvas {
     border: 1px solid black;
 }
+
+img {
+    display: block;
+}
+
+table {
+    margin: 0 auto;
+}
+
+td {
+    padding: 15px;
+}
+
+.body {
+    background: 0 -100px repeat-x url(https://mdn.mozillademos.org/files/5415/bg_gallery.png) #4F191A;
+    margin: 10px;
+}
+
+.body h2 {
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+}
+
+.body canvas {
+    border: none;
+}
